Fixed alignment bug

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@ li{
 li > .button{
   position: absolute;
   right: 0;
-  top: 11px;
+  top: 0;
+  height: 100%;
 }
 
+li > span{
+  display: inline-block;
+  margin-right: 35px;
+}
